--- a/hw03/src/main/resources/application.yml
+++ b/hw03/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     fallbackToSystemLocale: false
 test:
   rightAnswersCountToPass: 3
-  locale: en-US
+  locale: ru_RU
   fileNameByLocaleTag:
-    ru-RU: questions_ru.csv
-    en-US: questions.csv
+    ru-RU: /questions_ru.csv
+    en-US: /questions.csv
