--- a/hw05/src/test/resources/application.yml
+++ b/hw05/src/test/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     url: jdbc:h2:mem:testdb
   sql:
     init:
-      mode: always
+      mode: never
       data-locations: data.sql
       schema-locations: schema.sql
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yml
+    contexts: test
