Исправлена ошибка генерации идентификаторов при попытке вставки книги в БД

--- a/hw05/src/main/resources/db/changelog/1.0/2024-07-15--0003-books.yml
+++ b/hw05/src/main/resources/db/changelog/1.0/2024-07-15--0003-books.yml
@@ -12,6 +12,7 @@ databaseChangeLog:
               autoIncrement: true
               constraints:
                 primaryKey: true
+                nullable: false
           - column:
               name: title
               type: varchar(255)
