--- a/hw05/src/main/resources/db/changelog/1.0/2024-07-15--0001-authors.yml
+++ b/hw05/src/main/resources/db/changelog/1.0/2024-07-15--0001-authors.yml
@@ -12,6 +12,7 @@ databaseChangeLog:
               autoIncrement: true
               constraints:
                 primaryKey: true
+                nullable: false
           - column:
               name: full_name
               type: varchar(255)
