--- a/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0001-author.yml
+++ b/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0001-author.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
 - changeSet:
-      id: 2024-07-15--0001-authors
+      id: 2024-07-18--0001-author
       author: ruchev
       context: hw05 or test
       createTable:
-        tableName: authors
+        tableName: author
         columns:
           - column:
               name: id
