--- a/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0002-genre.yml
+++ b/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0002-genre.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 2024-07-15--0002-genres
+      id: 2024-07-18--0002-genre
       author: ruchev
       context: hw05 or test
       createTable:
-        tableName: genres
+        tableName: genre
         columns:
           - column:
               name: id
