--- a/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0003-book.yml
+++ b/hw06/src/main/resources/db/changelog/1.0/2024-07-18--0003-book.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 2024-07-15--0003-books
+      id: 2024-07-18--0003-book
       author: ruchev
       context: hw05 or test
       createTable:
-        tableName: books
+        tableName: book
         columns:
           - column:
               name: id
@@ -21,13 +21,13 @@ databaseChangeLog:
               type: bigint
               constraints:
                 foreignKeyName: fk_book_author
-                references: authors(id)
+                references: author(id)
                 deleteCascade: true
           - column:
               name: genre_id
               type: bigint
               constraints:
                 foreignKeyName: fk_book_genre
-                references: genres(id)
+                references: genre(id)
                 deleteCascade: true
 
