--- a/hw06/src/test/resources/application.yml
+++ b/hw06/src/test/resources/application.yml
@@ -1,12 +1,26 @@
 spring:
+
   datasource:
     url: jdbc:h2:mem:testdb
+
   sql:
     init:
       mode: never
       data-locations: data.sql
       schema-locations: schema.sql
+
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yml
     contexts: test
+
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+
+    show-sql: true
+
+logging:
+  level:
+    ROOT: ERROR
