--- a/hw06/src/main/resources/application.yml
+++ b/hw06/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
       ddl-auto: none
 
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
 
 logging:
   level:
