--- a/hw08/pom.xml
+++ b/hw08/pom.xml
@@ -40,12 +40,7 @@
             <groupId>de.flapdoodle.embed</groupId>
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>${flapdoodle.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
-            <version>${flapdoodle.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
