--- a/hw08/pom.xml
+++ b/hw08/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>ru.otus.hw</groupId>
     <artifactId>hw08-data-mongoDB</artifactId>
-    <name>spring-jpa</name>
+    <name>spring-mongo</name>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -23,7 +23,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <spring.shell.version>3.2.4</spring.shell.version>
         <mongock.version>4.3.8</mongock.version>
-        <flapdoodle.version>4.6.1</flapdoodle.version>
+        <flapdoodle.version>4.7.0</flapdoodle.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <reflections.version>0.10.2</reflections.version>
         <checkstyle-plugin.version>3.3.1</checkstyle-plugin.version>
@@ -44,6 +44,12 @@
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>${flapdoodle.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+            <version>${flapdoodle.version}</version>
         </dependency>
 
         <dependency>
