--- a/hw08/src/test/resources/application.yml
+++ b/hw08/src/test/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   data:
     mongodb:
-      port: 27017
-      database: library
+      #port: 27017
+      #database: library
       host: localhost
-      #port: 0
-      #database: testLibrary
+      port: 0
+      database: testLibrary
 
   shell:
     interactive:
@@ -16,10 +16,15 @@ spring:
     command:
       version:
         enabled: false
+de:
+  flapdoodle:
+    mongodb:
+      embedded:
+        version: 4.0.2
 
 mongock:
-  #runner-type: "ApplicationRunner" # default
-  runner-type: "InitializingBean"
+  runner-type: "ApplicationRunner" # default
+  #runner-type: "InitializingBean"
   change-logs-scan-package:
     - ru.otus.hw.changelogs
   mongo-db:
@@ -29,4 +34,4 @@ mongock:
 
 logging:
   level:
-    ROOT: ERROR
+    root: ERROR
