--- a/hw09/src/main/resources/application.yml
+++ b/hw09/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  messages:
+    encoding: UTF-8
 
   datasource:
     url: jdbc:h2:mem:maindb
@@ -15,6 +17,7 @@ spring:
     contexts: hw05
 
   jpa:
+    open-in-view: false
     generate-ddl: false
     hibernate:
       ddl-auto: none
