--- a/hw11/pom.xml
+++ b/hw11/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <groupId>ru.otus.hw</groupId>
-    <artifactId>hw09-spring-mvc</artifactId>
-    <name>spring-mvc-classic</name>
+    <artifactId>hw11-spring-security</artifactId>
+    <name>spring-security-authentication</name>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
