--- a/hw13/src/main/resources/application.yml
+++ b/hw13/src/main/resources/application.yml
@@ -16,40 +16,43 @@ spring:
       version:
         enabled: false
 
-  data:
-    mongodb:
-      host: localhost
-      port: 0
-      database: SpringBatchExampleDB
+  sql:
+    init:
+      mode: always
+      data-locations: data.sql
+      schema-locations: schema.sql
 
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
-    username: sa
-    password:
 
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  data:
+    mongodb:
+      port: 27017
+      database: migration
+      host: localhost
+
+mongock:
+#  runner-type: "ApplicationRunner" # default
+  runner-type: "InitializingBean"
+  change-logs-scan-package:
+    - ru.otus.hw.changelogs
+  mongo-db:
+    write-concern:
+      journal: false
+    read-concern: local
+
 de:
   flapdoodle:
     mongodb:
       embedded:
         version: 4.0.2
 
-mongock:
-  runner-type: "InitializingBean"
-  change-logs-scan-package:
-    - ru.otus.example.springbatch.chandgelogs
-  mongo-db:
-    write-concern:
-      journal: false
-    read-concern: local
-
-app:
-  ages-count-to-add: 1
-  input-file: entries.csv
-  output-file: output.dat
-
-#debug: true
+logging:
+  level:
+    ROOT: ERROR
