--- a/hw16/src/main/resources/application.yml
+++ b/hw16/src/main/resources/application.yml
@@ -3,7 +3,9 @@ spring:
     encoding: UTF-8
 
   datasource:
-    url: jdbc:h2:mem:maindb
+    url: jdbc:postgresql://localhost:5432/db
+    username: postgres
+    password: postgres
 
   sql:
     init:
