--- a/hw11/src/main/resources/application.yml
+++ b/hw11/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yml
-    contexts: hw05
+    contexts: hw05, hw06, hw11
 
   jpa:
     open-in-view: false
