--- a/hw11/src/main/resources/db/changelog/1.0/2024-07-18--0001-author.yml
+++ b/hw11/src/main/resources/db/changelog/1.0/2024-07-18--0001-author.yml
@@ -1,7 +1,7 @@
 databaseChangeLog:
 - changeSet:
       id: 2024-07-18--0001-author
-      author: ruchev
+      author: a1exander78
       context: hw05 or test
       createTable:
         tableName: author
