--- a/hw11/src/main/resources/db/changelog/1.0/2024-07-18--0003-book.yml
+++ b/hw11/src/main/resources/db/changelog/1.0/2024-07-18--0003-book.yml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 2024-07-18--0003-book
-      author: ruchev
+      author: a1exander78
       context: hw05 or test
       createTable:
         tableName: book
