Работа над ошибками. Ролевая модель реализована через сущность "Authority", в т.ч. в тестах

--- a/hw12/src/main/resources/db/changelog/4.0/2024-10-25--0001-authority.yml
+++ b/hw12/src/main/resources/db/changelog/4.0/2024-10-25--0001-authority.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 2024-10-25--0001-role
+      id: 2024-10-25--0001-authority
       author: a1exander78
       context: hw11 or test
       createTable:
-        tableName: role
+        tableName: authority
         columns:
           - column:
               name: id
@@ -14,7 +14,7 @@ databaseChangeLog:
                 primaryKey: true
                 nullable: false
           - column:
-              name: role
+              name: authority
               type: varchar(32)
               constraints:
                 nullable: false
