--- a/hw12/src/main/resources/db/changelog/4.0/2024-10-25--0002-client_authority.yml
+++ b/hw12/src/main/resources/db/changelog/4.0/2024-10-25--0002-client_authority.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: a1exander78
       context: hw11 or test
       createTable:
-        tableName: client_role
+        tableName: client_authority
         columns:
           - column:
               name: client_id
@@ -12,7 +12,7 @@ databaseChangeLog:
               constraints:
                 nullable: false
           - column:
-              name: role_id
+              name: authority_id
               type: bigint
               constraints:
                 nullable: false
