--- a/hw12/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/hw12/src/main/resources/db/changelog/db.changelog-master.yml
@@ -8,4 +8,6 @@ databaseChangeLog:
     - includeAll:
           path: db/changelog/4.0/
     - includeAll:
+        path: db/changelog/5.0/
+    - includeAll:
         path: db/changelog/data/
