--- a/hw12/src/test/resources/application.yml
+++ b/hw12/src/test/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
 
+  h2:
+    console.enabled: true
+
   datasource:
     url: jdbc:h2:mem:testdb
+    username: sa
+    password:
 
   sql:
     init:
