--- a/hw18/src/test/resources/application.yml
+++ b/hw18/src/test/resources/application.yml
@@ -1,28 +1,30 @@
 spring:
+  messages:
+    encoding: UTF-8
 
-  datasource:
-    url: jdbc:h2:mem:testdb
+  data:
+    mongodb:
+      #port: 27017
+      #database: library4hw18
+      host: localhost
+      port: 0
+      database: testLibrary4hw18
 
-  sql:
-    init:
-      mode: never
-      data-locations: data.sql
-      schema-locations: schema.sql
+de:
+  flapdoodle:
+    mongodb:
+      embedded:
+        version: 4.0.2
 
-  liquibase:
-    enabled: true
-    change-log: classpath:db/changelog/db.changelog-master.yml
-    contexts: test
-
-  jpa:
-    generate-ddl: false
-    hibernate:
-      ddl-auto: none
-
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+mongock:
+  #runner-type: "ApplicationRunner" # default
+  runner-type: "InitializingBean"
+  change-logs-scan-package:
+    - ru.otus.hw.changelogs
+  mongo-db:
+    write-concern:
+      journal: false
+    read-concern: local
 
 logging:
   level:
