Изменения в соответствии с замечаниями к ПР

--- a/hw17/src/main/resources/application.yml
+++ b/hw17/src/main/resources/application.yml
@@ -59,7 +59,7 @@ resilience4j.circuitbreaker:
       failureRateThreshold: 50
       eventConsumerBufferSize: 50
   instances:
-    myCircuitBreaker:
+    serviceCircuitBreaker:
       baseConfig: default
 
 logging:
